2 changes: read commit description
1. Remove profile picture

 - Delete /assets/icons/favicon.ico
 - Delete /assets/images/logo.png
 - Remove references to the profile picture from index.html, 404.html, main.css and mobile.css (also includes the topnavicon class)
 - Reason of removal: I personally dislike it and have absolutely no idea for a better profile picture. And as most probably know, I've had this profile picture for so long (3+ years), so perhaps it's time for a change ;)

2. Turn the top navigation bar into a simple title bar (which sends you to the home page when you click it, like the old .topnavtitle and .topnavicon did)

 - Update index.html, main.css and mobile.css

--- a/index.html
+++ b/index.html
@@ -21,34 +21,16 @@
       href="assets/stylesheets/mobile.css"
       media="only screen and (max-width: 600px)"
     />
-    <link
-      rel="shortcut icon"
-      href="assets/icons/favicon.ico"
-      type="image/x-icon"
-    />
     <meta name="description" content="Check out my website!" />
     <meta name="robots" content="noarchive" />
   </head>
   <body>
-    <!-- Top navigation bar -->
-
-    <div
-      class="topnavgrp animate__animated animate__fadeInDown"
-      style="width: 100%"
-    >
-      <div class="topnav">
-        <a href="index.html"
-          ><img
-            src="assets/images/logo.png"
-            class="topnavicon button"
-            alt="My profile picture"
-        /></a>
-        <a href="index.html" class="button topnavtitle">Aless website</a>
-      </div>
-    </div>
     <div class="website-background"></div>
-
-    <!--                    -->
+    <a
+      href="index.html"
+      class="button titlebar animate__animated animate__fadeInDown"
+      >Aless website</a
+    >
     <div class="animate__animated animate__bounceIn">
       <h1 style="text-align: center">Welcome to my website! :)</h1>
     </div>
