Remove FontAwesome icons

--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aless website</title>
-    <!--[if lt IE 9]><!-->
-    <style>
-      i {
-        display: none;
-      }
-    </style>
-    <!--<![endif]-->
-    <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
     <link
@@ -38,46 +30,46 @@
       <div class="animate__animated animate__zoomIn">
         <h3>You can find my social links below:</h3>
         <a href="https://twitter.com/AlessGoss" target="_blank" class="button">
-          <i class="fab fa-twitter"></i>Twitter profile</a
+          Twitter profile</a
         >
         <a
           href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
           target="_blank"
           class="button"
-          ><i class="fab fa-youtube"></i>YouTube channel</a
+          >YouTube channel</a
         >
         <a
           href="https://discord.com/invite/3uq9hDDwmn"
           target="_blank"
           class="button"
-          ><i class="fab fa-discord"></i>Discord server</a
+          >Discord server</a
         >
         <a href="https://t.me/AlessBlog" target="_blank" class="button"
-          ><i class="fab fa-telegram"></i>Telegram blog</a
+          >Telegram blog</a
         >
         <a
           href="https://reddit.com/user/AlessDu59"
           target="_blank"
           class="button"
-          ><i class="fab fa-reddit"></i>Reddit profile</a
+          >Reddit profile</a
         >
       </div>
       <div class="container animate__animated animate__bounceIn">
-        <p><i class="fab fa-github"></i>GitHub</p>
+        <p>GitHub</p>
         <a href="https://github.com/AlessGoss" target="_blank" class="button"
-          ><i class="fas fa-user-circle"></i>Profile</a
+          >Profile</a
         >
         <a
           href="https://github.com/AlessGoss/alessgoss.github.io"
           target="_blank"
           class="button"
-          ><i class="fas fa-code"></i>Website repository</a
+          >Website repository</a
         >
         <a
           href="https://gist.github.com/AlessGoss"
           target="_blank"
           class="button"
-          ><i class="fas fa-file-code"></i>Gists</a
+          >Gists</a
         >
       </div>
     </div>
