--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="animate__animated animate__zoomIn">
         <h3>You can find my social links below:</h3>
         <a href="https://twitter.com/AlessGoss" target="_blank" class="button">
-          Twitter profile</a
+          X (Twitter) profile</a
         >
         <a
           href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
