Update animations in index.html

--- a/index.html
+++ b/index.html
@@ -23,38 +23,44 @@
       class="button titlebar animate__animated animate__fadeInDown"
       >Aless website</a
     >
-    <div class="animate__animated animate__bounceIn">
+    <div class="animate__animated animate__jackInTheBox">
       <h1 style="text-align: center">Welcome to my website! :)</h1>
     </div>
     <div style="text-align: center">
-      <div class="animate__animated animate__zoomIn">
-        <h3>You can find my social links below:</h3>
-        <a href="https://twitter.com/AlessGoss" target="_blank" class="button">
+      <div>
+        <a
+          href="https://twitter.com/AlessGoss"
+          target="_blank"
+          class="button animate__animated animate__flipInY"
+        >
           X (Twitter) profile</a
         >
         <a
           href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
           target="_blank"
-          class="button"
+          class="button animate__animated animate__flipInY"
           >YouTube channel</a
         >
         <a
           href="https://discord.com/invite/3uq9hDDwmn"
           target="_blank"
-          class="button"
+          class="button animate__animated animate__flipInY"
           >Discord server</a
         >
-        <a href="https://t.me/AlessBlog" target="_blank" class="button"
+        <a
+          href="https://t.me/AlessBlog"
+          target="_blank"
+          class="button animate__animated animate__flipInY"
           >Telegram blog</a
         >
         <a
           href="https://reddit.com/user/AlessDu59"
           target="_blank"
-          class="button"
+          class="button animate__animated animate__flipInY"
           >Reddit profile</a
         >
       </div>
-      <div class="container animate__animated animate__bounceIn">
+      <div class="container animate__animated animate__flipInX">
         <p>GitHub</p>
         <a href="https://github.com/AlessGoss" target="_blank" class="button"
           >Profile</a
