Simplify YouTube channel URL

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           X (Twitter) profile</a
         >
         <a
-          href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
+          href="https://youtube.com/@AlessGoss"
           target="_blank"
           class="button animate__animated animate__flipInY"
           >YouTube channel</a
